daemonset.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: podinfo
spec:
  selector:
    matchLabels:
      app: podinfo
  template:
    metadata:
      labels:
        app: podinfo
    spec:
      containers:
        - name: podinfo
          image: ghcr.io/stefanprodan/podinfo:6.6.3
          command:
            - ./podinfo
            - '--port=9000'
          ports:
            - name: http
              containerPort: 9000
              protocol: TCP
