deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      securityContext: 
        fsGroup: 1
      containers:
        - name: nginx
          image: nginx:1.27.2
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
#          volumeMounts:
#          - name: data
#            mountPath: /data
#      volumes:
#      - name: data
#        persistentVolumeClaim:
#          claimName: podinfo-pvc
