statefulset.yaml
apiVersion: v1
kind: Service
metadata:
  name: podinfo
spec:
  ports:
  - name: http
    port: 9000
    protocol: TCP
    targetPort: http
  clusterIP: None
  selector:
    app: podinfo

---

apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: podinfo
spec:
  selector:
    matchLabels:
      app: podinfo
  serviceName: podinfo
  replicas: 2
  template:
    metadata:
      labels:
        app: podinfo
    spec:
      securityContext:
        fsGroup: 1
      containers:
        - name: podinfo
          image: ghcr.io/stefanprodan/podinfo:6.6.3
          command:
            - ./podinfo
            - '--port=9000'
          ports:
            - name: http
              containerPort: 9000
              protocol: TCP
          volumeMounts:
          - name: data
            mountPath: /data
  volumeClaimTemplates:
  - metadata:
      name: data
    spec:
      accessModes:
      - ReadWriteOnce
      storageClassName: yc-network-hdd
      resources:
        requests:
          storage: 1Gi
